Confimration order has been added

--- a/mobile_client/Preordrer/src/main/res/values/strings.xml
+++ b/mobile_client/Preordrer/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_goods_selecting">GoodsSelectingActivity</string>
     <string name="make_order">Заказать</string>
     <string name="bin">Корзина</string>
+    <string name="pay">Оплатить</string>
 </resources>
