#6 Make a icon to show product_bin on the selection product screen. Show product bin on the separet window or dialog box

--- a/Preordrer/src/main/res/values/strings.xml
+++ b/Preordrer/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="nearest_time">Ближайшее время</string>
     <string name="take_order">Заберу заказ</string>
     <string name="at">в</string>
+    <string name="order_payed">Заказ оплачен</string>
+    <string name="menu">Меню</string>
 </resources>
